--- a/practice/package.json
+++ b/practice/package.json
@@ -6,13 +6,20 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@playwright/test": "^1.46.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.4.1",
+    "eslint": "^9.9.0",
     "globals": "^15.9.0",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   },
-  "dependencies": {
-    "typescript": "^5.5.4"
+  "scripts": {
+    "lint": "npx eslint .",
+    "format": "npx prettier ."
   }
 }
