Create the page manager

--- a/practice/tsconfig.json
+++ b/practice/tsconfig.json
@@ -13,6 +13,7 @@
       "@pages/*": ["pages/*"],
       "@tests/*": ["tests/*"],
       "@config/*": ["config/*"],
+      "@utils/*": ["utils/*"],
     }
   },
   "include": [
