--- a/practice/package.json
+++ b/practice/package.json
@@ -12,6 +12,7 @@
     "@playwright/test": "^1.46.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.4.1",
+    "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
