--- a/practice/package.json
+++ b/practice/package.json
@@ -32,7 +32,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{js,jsx,ts}": [
       "prettier --write",
       "eslint --fix",
       "git add"
