--- a/practice/.gitignore
+++ b/practice/.gitignore
@@ -5,3 +5,11 @@ node_modules/
 /playwright/.cache/
 /.auth/
 .env
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
