--- a/practice/package.json
+++ b/practice/package.json
@@ -9,37 +9,16 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@playwright/test": "^1.46.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.4.1",
-    "dotenv": "^16.4.5",
+    "@playwright/test": "^1.46.1",
+    "@types/node": "^22.4.2",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.9",
-    "prettier": "3.3.3",
-    "typescript": "^5.5.4",
     "typescript-eslint": "^8.2.0"
   },
   "scripts": {
-    "lint": "npx eslint .",
-    "format": "npx prettier .",
-    "prepare": "husky install"
+    "lint": "eslint './src/**/*.{ts,js}'"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*.{html,css,less,ejs}": [
-      "prettier --write",
-      "git add"
-    ]
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
