--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+    - name: Navigate to practice folder
+      run: cd practice/
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
