--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Navigate to practice folder
       run: cd practice/
     - name: Install dependencies
-      run: npm ci
+      run: npm i
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
