--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: lts/*
     - name: Navigate to practice folder
-      run: cd practice/
+      run: cd practice/ && ls
     - name: Install dependencies
       run: npm i
     - name: Install Playwright Browsers
