--- a/practice/.github/workflows/main.yml
+++ b/practice/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: practice/playwright-report/
         retention-days: 30
